# l4-ide

./: .dockerignore  .editorconfig  .envrc  .gitbook.yaml  .gitignore  .gitmodules  .npmrc  .prettierignore  AGENTS.html  AGENTS.md  BIDIRECTIONAL-TYPE-CHECKING-SPEC.md  BRANCH-SEPARATION.md  CLAUDE.html  CLAUDE.md  COMPLETE-STATE-GRAPH-INTEGRATION.md  DEPLOYMENT.md  Dev.html  Dev.md  Dockerfile.jl4-decision-service  Dockerfile.jl4-lsp  Dockerfile.jl4-service  Dockerfile.jl4-web  Dockerfile.jl4-websessions  FETCH-POST-JSON-SPEC.md  HELP.html  HELP.md  MIXFIX-STATUS.html  MIXFIX-STATUS.md  PLUGIN.md  POST-HEADER-SUPPORT-ISSUE.md  PROVISIONING.md  Quickstart.html  Quickstart.md  README-AI-QUERYING.md  README.html  README.md  REPORT.md  STATE-GRAPH-REST-API-IMPLEMENTATION.md  TESTING-GUIDE.md  bun.lockb  (+19 more)
jl4/: GRAMMAR.md  README.md  cabal.project  jl4.cabal
jl4-actus-analyzer/: LICENSE  README.md  jl4-actus-analyzer.cabal
jl4-actus-analyzer/app/: Main.hs
jl4-actus-analyzer/test/: ArchetypesSpec.hs  EssenceSpec.hs  FeatureExtractorSpec.hs  HybridSpec.hs  MatchingSpec.hs  ObligationGraphSpec.hs
jl4-core/: GRAMMAR.md  jl4-core.cabal
jl4-core/experiments/: README.md  britishcitizen.l4  britishcitizen2.l4  order-invariance.l4  term-expansion.l4
jl4-core/libraries/: README.md  actus-core.l4  actus-daycount.l4  actus-events.l4  actus-schedule.l4  actus-state.l4  currency.l4  date-compat.l4  datetime.l4  daydate.l4  excel-date.l4  jurisdiction.l4  legal-persons.l4  llm.l4  math.l4  prelude.l4  temporal-prelude.l4  time.l4  timezone.l4
jl4-core/libraries/tests/: actus-core.schema.golden  actus-daycount.ep.golden  actus-daycount.schema.golden  actus-events.schema.golden  actus-schedule.ep.golden  actus-schedule.schema.golden  actus-state.schema.golden  actus-terms.ep.golden  actus-terms.schema.golden  actus.ep.golden  actus.schema.golden  currency.ep.golden  currency.schema.golden  date-compat.ep.golden  date-compat.schema.golden  datetime.ep.golden  datetime.schema.golden  daydate.ep.golden  daydate.schema.golden  excel-date.ep.golden  excel-date.schema.golden  holdings.ep.golden  holdings.schema.golden  llm.ep.golden  (+14 more)
jl4-core/src/: Base.hs
jl4-core/test/: DirectiveRenameSpec.hs  ExportValidationSpec.hs  ImportResolutionSpec.hs  MixfixParserSpec.hs  NumberLiteralSpec.hs  TemporalContextSpec.hs  UUID5Spec.hs
jl4-decision-service/: IMPORT-FIX-PLAN.md  README.md  STATE-GRAPH-API.md  jl4-decision-service.cabal  jl4-decision-service.code-workspace  test-either-decode.l4  test-state-graph-api.sh
jl4-decision-service/src/: Application.hs  Examples.hs  Options.hs  Schema.hs  Server.hs
jl4-decision-service/test/: ApiSpec.hs  AskOrderingSpec.hs  BooleanDecisionQuerySpec.hs  CodeGenSpec.hs  DecisionQueryCacheKeySpec.hs  DiskLoadingSpec.hs  IntegrationSpec.hs  SchemaSpec.hs  TestData.hs
jl4-lsp/: jl4-lsp.cabal
jl4-lsp/app/: Server.hs
jl4-mlir/: FEATURE-PARITY-PLAN.md  README.md  SOLIDITY-BACKEND-PLAN.md  jl4-mlir.cabal
jl4-mlir/app/: Main.hs
jl4-mlir/coverage-report/: FINDINGS.md  coverage.json  coverage.txt
jl4-mlir/runtime/: jl4-runtime.mjs  jl4-runtime.test.mjs  rational.mjs  rational.test.mjs  wasm-backend.mjs  wasm-backend.test.mjs
jl4-mlir/scripts/: batch-compile.sh  coverage-sweep.py  parity-harness.mjs  wasm-server.mjs  wasm-server.test.mjs  wasm-worker.mjs
jl4-mlir/test/: Main.hs
jl4-query-plan/: jl4-query-plan.cabal
jl4-repl/: README.md  jl4-repl.cabal
jl4-repl/app/: Main.hs
jl4-service/: README.md  jl4-service.cabal
jl4-service/app/: Main.hs
jl4-service/src/: Application.hs  BundleStore.hs  Compatibility.hs  Compiler.hs  ControlPlane.hs  DataPlane.hs  DeploymentLoader.hs  ExplorerPage.hs  FileBrowser.hs  Logging.hs  McpServer.hs  OpenApiDoc.hs  Options.hs  Schema.hs  Shared.hs  Types.hs  Version.hs  WebMCPPage.hs
jl4-service/test/: ApiSpec.hs  BooleanDecisionQuerySpec.hs  BundleStoreSpec.hs  CodeGenSpec.hs  CompatibilitySpec.hs  DecisionQueryCacheKeySpec.hs  IntegrationSpec.hs  MaybeLiftSpec.hs  PutGuardSpec.hs  QueryPlanSpec.hs  SanitizationSpec.hs  SchemaSpec.hs  SerialisationSpec.hs  TestData.hs
jl4-wasm/: README.md  jl4-wasm.cabal
jl4-wasm/app/: Main.hi  Main.hs  Main_stub.h  QueryPlanWasm.hs
jl4-wasm/scripts/: build-wasm.sh  optimize-wasm.sh
jl4-websessions/: README.md  create.sql  jl4-websessions.cabal  jl4.cabal
jl4-websessions/app/: Main.hs
jl4-websessions/test/: Main.hs
jl4/app/: Main.hs  Schema.hs
jl4/examples/: 415cheating.l4  britishcitizen.l4  citations.csv  datatypes.l4  dates.l4  elem.l4  error-unify-test.l4  error2.l4  error3.l4  eval.l4  factorial.l4  fold.l4  implicit-assume-test.l4  literal.l4  misc.l4  operators.l4  parens.l4  parse-funapp.l4  polymorphism.l4  record.l4  replicate.l4  scombinator-fragment.l4  scombinator.l4  tdnr.l4
jl4/experiments/: BUG-mixfix-cross-module-ternary.l4  JSONDECODE-BUG-REPORT.md  Singapore-Data-Protection-Act.l4  TODO.md  actors.l4  anti-social.org  base-money.l4  britishcitizen.l4  britishcitizen3.json  britishcitizen3.l4  britishcitizen3.yaml  britishcitizen4.l4  britishcitizen4.yaml  britishcitizen5.l4  britishcitizen5.yaml  carInsurance.l4  charities_rationalisation.md  cheating-420.l4  computed-fields-age.l4  computed-fields-basic.l4  computed-fields-chain.l4  computed-fields-external-of.l4  computed-fields-external.l4  computed-fields-legal.l4  computed-fields-nested.l4  computed-fields-override.l4  computed-fields-where-let.l4  conditionsOfEligibility.l4  cubed-postfix.l4  deontic-may.l4  dogs.l4  environmental-quality-review-act-7.l4  every-basic.l4  every-complex-who.l4  every-mutual-nda.l4  every-not-ok-missing-type.l4  every-not-ok-undeclared-type.l4  every-not-ok-who-wrong-arity.l4  every-shant.l4  every-within.l4  (+54 more)
jl4/libraries/: prelude.l4
jl4/lsp/: JLServer.hs  Ladder.hs  Main.hs  SemanticTokens.hs  Server.hs
jl4/src/: Base.hs
jl4/tests/: Hover.hs  Main.hs  SemanticTokens.hs
jl4/tests-cli/: Main.hs
jl4/web/: Main.hs
web-service/: web-service.cabal
web-service/src/: Application.hs  Examples.hs  Schema.hs  Server.hs
web-service/test/: SchemaSpec.hs
(+2383 files in other folders)
