cabal-version: 3.0
name: jl4-core
version: 0.1
build-type: Simple
tested-with: GHC==9.10.2

flag safe-mode
  description: Disable FETCH/POST builtins (for WASM builds). When enabled, HTTP operations return errors.
  default: False
  manual: True

data-files: libraries/*.l4

common defaults
  default-language: GHC2021
  ghc-options: -Wall -Wderiving-typeable -Wunused-packages -Werror
  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    LambdaCase
    -- This is annoying with fourmolu
    NoImportQualifiedPost
  build-depends:
    base

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    aeson,
    bytestring,
    placeholder,
    containers,
    data-default,
    deepseq,
    directory,
    dlist,
    extra,
    fgl,
    filepath,
    generics-sop,
    graphviz,
    logict,
    lsp-types,
    megaparsec,
    mtl,
    optics,
    optics-core,
    pretty-simple,
    prettyprinter,
    time,
    scientific,
    split,
    text >= 2 && < 2.1.2,
    tree-diff,
    vector,
    template-haskell,

  if !flag(safe-mode)
    build-depends: req >= 3.0
    cpp-options: -DHTTP_ENABLED

  -- For WASM JavaScript FFI exports
  if arch(wasm32)
    build-depends: ghc-experimental

  autogen-modules:
    Paths_jl4_core

  exposed-modules:
    Base
    Base.DList
    Base.Map
    Base.Set
    Base.Pretty
    Base.Text
    Paths_jl4_core
    L4.Annotation
    L4.Citations
    L4.Desugar
    L4.DirectiveFilter
    L4.Evaluate.Operators
    L4.Evaluate.ValueLazy
    L4.EvaluateLazy
    L4.EvaluateLazy.Machine
    L4.EvaluateLazy.ContractFrame
    L4.EvaluateLazy.GraphViz2
    L4.EvaluateLazy.GraphVizOptions
    L4.EvaluateLazy.Trace
    L4.StateGraph
    L4.ExactPrint
    L4.Export
    L4.FindDefinition
    L4.JsonSchema
    L4.Lexer
    L4.Lint.AndOrDepth
    L4.Mixfix
    L4.Names
    L4.Nlg
    L4.Parser
    L4.Parser.Anno
    L4.Parser.MixfixRegistry
    L4.Parser.ResolveAnnotation
    L4.Parser.SrcSpan
    L4.ParserCombinators
    L4.Print
    L4.Syntax
    L4.TemporalContext
    L4.TracePolicy
    L4.Transform
    L4.TypeCheck
    L4.TypeCheck.Annotation
    L4.TypeCheck.Environment
    L4.TypeCheck.Environment.TH
    L4.TypeCheck.Types
    L4.TypeCheck.Unify
    L4.TypeCheck.With
    L4.Utils.IntervalMap
    L4.Utils.RevList
    L4.Utils.Ratio
    L4.Crypto.SHA1
    L4.Crypto.UUID5
    L4.Viz.Ladder
    L4.Viz.VizExpr
    L4.Import.Resolution
    L4.Wasm
    L4.Wasm.EmbeddedLibraries
    L4.Wasm.EmbeddedLibraries.TH
    L4.Wasm.Import

test-suite jl4-core-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Paths_jl4_core
    ImportResolutionSpec
    TemporalContextSpec
    MixfixParserSpec
    UUID5Spec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    base,
    bytestring,
    containers,
    hspec,
    jl4-core,
    text,
    time
