cabal-version: 3.0
name: jl4-decision-service
version: 0.1.0.0
build-type: Simple
tested-with: ghc ==9.6.6

source-repository head
  type: git
  location: https://github.com/smucclaw/l4-ide/tree/main/jl4-decision-service

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wderiving-typeable
    -Wunused-packages
    -Werror
    -Wall
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    -- This is annoying with fourmolu
    NoImportQualifiedPost

  build-depends:
    base >=4.7 && <5

library
  import: defaults
  exposed-modules:
    Application
    Backend.Api
    Backend.CodeGen
    Backend.DirectiveFilter
    Backend.GraphVizRender
    Backend.Jl4
    Examples
    Options
    Schema
    Server


  hs-source-dirs:
    src

  build-depends:
    uuid,
    aeson,
    aeson-combinators,
    async,
    bytestring,
    chronos,
    containers,
    extra,
    directory,
    http-client,
    filepath,
    jl4-core,
    jl4-lsp,
    jl4-websessions,
    lens,
    lsp-types,
    openapi3,
    optics,
    optparse-applicative,
    process,
    scientific,
    servant >=0.20.2 && <0.21,
    servant-client,
    servant-client-core,
    servant-openapi3,
    servant-server >=0.20.2 && <0.21,
    servant-swagger-ui,
    stm,
    string-interpolate,
    text,
    transformers,
    vector,
    wai,
    wai-cors,
    wai-logger,
    warp,
    yaml,

executable jl4-decision-service-exe
  import: defaults
  main-is: Main.hs
  other-modules:
    Paths_jl4_decision_service

  autogen-modules:
    Paths_jl4_decision_service

  hs-source-dirs:
    app

  build-depends:
    jl4-decision-service

test-suite jl4-decision-service-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_jl4_decision_service
    IntegrationSpec
    SchemaSpec
    TestData

  hs-source-dirs:
    test

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    transformers ^>=0.6.1.0,
    string-interpolate ^>=0.3.4.0,
    containers ^>=0.6.7,
    stm ^>=2.5.1.0,
    base >=4.7 && <5,
    hspec,
    http-client,
    jl4-decision-service,
    QuickCheck,
    quickcheck-instances,
    servant >=0.20.2 && <0.21,
    servant-client,
    servant-openapi3,
    servant-client-core,
    text,
    warp,
