cabal-version: 3.0
name: jl4
version: 0.1
build-type: Simple
tested-with: GHC==9.6.6

common defaults
  default-language: GHC2021
  ghc-options: -Wall -Wderiving-typeable -Wunused-packages -Werror
  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    LambdaCase
    -- This is annoying with fourmolu
    NoImportQualifiedPost
  build-depends:
    base

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    bytestring,
    cassava,
    containers,
    data-default,
    deepseq,
    extra,
    file-io,
    filepath,
    generics-sop,
    hw-fingertree,
    logict,
    megaparsec,
    mtl,
    optics,
    optics-core,
    optparse-applicative,
    pcre2,
    pretty-simple,
    prettyprinter,
    safe-exceptions,
    text >= 2 && < 2.1.2,
    tree-diff,
    vector,

  exposed-modules:
    Base
    Base.Map
    Base.Set
    Base.Pretty
    Base.Text
    L4.Annotation
    L4.Citations
    L4.Evaluate
    L4.Evaluate.Value
    L4.ExactPrint
    L4.FindDefinition
    L4.HoverInfo
    L4.Main
    L4.Lexer
    L4.Parser
    L4.Parser.ResolveAnnotation
    L4.Parser.SrcSpan
    L4.ParserCombinators
    L4.Print
    L4.Syntax
    L4.Transform
    L4.TypeCheck
    L4.TypeCheck.Environment
    L4.TypeCheck.Types
    L4.TypeCheck.With

library jl4-lsp-core
  import: defaults
  visibility: public
  hs-source-dirs: src-lsp
  build-depends:
    Diff,
    aeson,
    async,
    bytestring,
    co-log-core,
    deepseq,
    extra,
    focus,
    hashable,
    hls-graph,
    jl4,
    lens,
    lens-aeson,
    lsp,
    lsp-types,
    mtl,
    prettyprinter,
    prettyprinter-ansi-terminal,
    safe-exceptions,
    stm,
    stm-containers,
    text,
    text-rope,
    time,
    unliftio,
    unordered-containers,
    vector,
    list-t,
    enummapset,
    sorted-list,
    filepath,
    transformers,
    data-default,
    containers,
    binary,
    directory,
    Glob,

  if os(windows)
    build-depends: Win32
  else
    build-depends: unix

  exposed-modules:
    Control.Concurrent.Strict

    LSP.Logger
    LSP.Core.Action
    LSP.Core.Debouncer
    LSP.Core.FileExists
    LSP.Core.FileStore
    LSP.Core.FileUtils
    LSP.Core.PositionMapping
    LSP.Core.IdeConfiguration
    LSP.Core.OfInterest
    LSP.Core.ProgressReporting
    LSP.Core.RuleTypes
    LSP.Core.Shake
    LSP.Core.Service
    LSP.Core.WorkerThread
    LSP.Core.Types.Diagnostics
    LSP.Core.Types.Location
    LSP.Core.Types.Monitoring
    LSP.Core.Types.Options
    LSP.Core.Types.Shake

executable jl4-cli
  import: defaults
  hs-source-dirs: app
  build-depends:
    jl4
  main-is: Main.hs

executable jl4-lsp
  import: defaults
  ghc-options:
    -threaded
    -rtsopts
    -- disable idle GC
    -- increase nursery size
    -- Enable collection of heap statistics
    "-with-rtsopts=-I0 -A128M -T"
  hs-source-dirs: lsp
  build-depends:
    aeson,
    autodocodec,
    bytestring ^>=0.11.5.3,
    co-log-core,
    containers,
    deepseq,
    directory,
    extra,
    fuzzy,
    generics-sop,
    hashable >=1.4.0.0,
    hls-graph ^>=2.9.0.0,
    hw-fingertree,
    jl4,
    jl4-lsp-core,
    lens,
    lsp ^>=2.7.0.0,
    lsp-types ^>=2.3.0.0,
    monoidal-containers,
    mtl,
    optics,
    optparse-applicative,
    safe-exceptions,
    stm,
    stm-containers ^>=1.2.1,
    -- NOTE: the reason why we have an upperbound on text is that
    -- it introduces new definitions that conflicts with ours
    text >= 2 && < 2.1.2,
    text-rope >= 0.3,
    transformers,
    unliftio,
    unordered-containers ^>=0.2.20,
    websockets,

  main-is: Server.hs
  other-modules:
    LSP.SemanticTokens
    LSP.L4.Base
    LSP.L4.Config
    LSP.L4.Handlers
    LSP.L4.Viz.VizExpr
    LSP.L4.Viz.Ladder
    LSP.L4.LanguageServer
    LSP.L4.Rules
    LSP.L4.SemanticTokens

test-suite jl4-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Paths_jl4
  autogen-modules:
    Paths_jl4
  build-depends:
    Glob,
    filepath,
    hspec,
    hspec-golden,
    jl4,
    optics,
    silently,
