cabal-version: 3.0
name: jl4
version: 0.1
build-type: Simple
tested-with: GHC==9.6.6

common defaults
  default-language: GHC2021
  ghc-options: -Wall -Wderiving-typeable -Wunused-packages -Werror
  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    LambdaCase
    -- This is annoying with fourmolu
    NoImportQualifiedPost
  build-depends:
    base

executable jl4-cli
  import: defaults
  hs-source-dirs: app
  build-depends:
    jl4-core,
    jl4-lsp,
    directory,
    time,
    lsp-types,
    optparse-applicative,
    pretty-simple,
  main-is: Main.hs

test-suite jl4-test
  import: defaults
  ghc-options: -threaded -rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    SemanticTokens
    Paths_jl4
  autogen-modules:
    Paths_jl4
  build-depends:
    Glob,
    filepath,
    hspec,
    hspec-golden,
    jl4-core,
    jl4-lsp,
    parser-regex,
    optics,
    silently,
    transformers,
    lsp-types,
