cabal-version: 3.0
name: jl4
version: 0.1
build-type: Simple
tested-with: GHC==9.10.2

common defaults
  default-language: GHC2021
  ghc-options: -Wall -Wderiving-typeable -Wunused-packages -Werror
  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    LambdaCase
    -- This is annoying with fourmolu
    NoImportQualifiedPost
  build-depends:
    base

executable l4
  import: defaults
  hs-source-dirs: app
  build-depends:
    jl4-core,
    jl4-lsp,
    aeson,
    bytestring,
    cassava,
    directory,
    filepath,
    hls-graph,
    lsp-types,
    process,
    text,
    time,
    optparse-applicative,
    pretty-simple,
    unordered-containers,
    vector,
    yaml,
  main-is: Main.hs
  other-modules:
    L4.Cli.Ast
    L4.Cli.Batch
    L4.Cli.Check
    L4.Cli.Common
    L4.Cli.Fmt
    L4.Cli.Run
    L4.Cli.StateGraph
    L4.Cli.Trace

executable jl4-schema
  import: defaults
  hs-source-dirs: app
  build-depends:
    jl4-core,
    jl4-lsp,
    aeson-pretty,
    bytestring,
    containers,
    directory,
    lsp-types,
    optparse-applicative,
  main-is: Schema.hs

test-suite jl4-test
  import: defaults
  ghc-options: -threaded -rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Hover
    SemanticTokens
    Paths_jl4
  autogen-modules:
    Paths_jl4
  build-depends:
    aeson-pretty,
    bytestring,
    containers,
    Glob,
    filepath,
    hspec,
    hspec-golden,
    jl4-core,
    jl4-lsp,
    parser-regex,
    optics,
    silently,
    transformers,
    lsp-types,

test-suite l4-cli-test
  import: defaults
  ghc-options: -threaded -rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests-cli
  main-is: Main.hs
  other-modules:
    Paths_jl4
  autogen-modules:
    Paths_jl4
  build-tool-depends:
    jl4:l4
  build-depends:
    aeson,
    bytestring,
    directory,
    filepath,
    hspec,
    process,
